--- a/NotABadPlayer/app/src/main/res/layout/item_search_result.xml
+++ b/NotABadPlayer/app/src/main/res/layout/item_search_result.xml
@@ -24,14 +24,14 @@
         android:orientation="vertical">
         
         <TextView
-            android:id="@+id/title"
+            android:id="@+id/titleText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAppearance="@style/ListItemText"
             android:singleLine="true"/>
 
         <TextView
-            android:id="@+id/albumTitle"
+            android:id="@+id/albumTitleText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAppearance="@style/ListItemText"
@@ -55,7 +55,7 @@
                 android:src="@drawable/shiny_star"
                 android:visibility="gone" />
             <TextView
-                android:id="@+id/duration"
+                android:id="@+id/descriptionText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="@style/ListItemSubtext"
