--- a/NotABadPlayer/app/src/main/res/layout/fragment_search.xml
+++ b/NotABadPlayer/app/src/main/res/layout/fragment_search.xml
@@ -53,6 +53,7 @@
             android:gravity="center"
             android:orientation="horizontal">
             <RadioGroup
+                android:id="@+id/searchFilterGroup"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="text"
