--- a/NotABadPlayer/app/src/main/res/layout/activity_create_playlist.xml
+++ b/NotABadPlayer/app/src/main/res/layout/activity_create_playlist.xml
@@ -42,7 +42,7 @@
             android:id="@+id/buttonDone"
             android:layout_width="64dp"
             android:layout_height="48dp"
-            android:text="@string/playlist_done"
+            android:text="@string/playlist_create"
             android:textAppearance="@style/GenericButtonText"
             android:background="@drawable/background_button"/>
     </LinearLayout>
