--- a/NotABadPlayer/app/src/main/res/layout/activity_main.xml
+++ b/NotABadPlayer/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".View.Main.MainActivity">
+    tools:context=".MainActivity">
 
     <include layout="@layout/layout_navigation"/>
 
