--- a/NotABadPlayer/app/src/main/res/layout/fragment_search.xml
+++ b/NotABadPlayer/app/src/main/res/layout/fragment_search.xml
@@ -18,7 +18,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
-        <android.support.constraint.ConstraintLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="48dp">
             <EditText
@@ -45,7 +45,7 @@
                 android:background="@null"
                 app:layout_constraintRight_toRightOf="parent"
                 android:gravity="center_vertical"/>
-        </android.support.constraint.ConstraintLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
