--- a/NotABadPlayer/app/src/main/res/layout/layout_navigation.xml
+++ b/NotABadPlayer/app/src/main/res/layout/layout_navigation.xml
@@ -7,7 +7,7 @@
     android:orientation="horizontal"
     android:background="@color/navigationBackground">
 
-    <android.support.design.widget.BottomNavigationView
+    <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/navigation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
