Implemented audio player idle stop timer

--- a/NotABadPlayer/app/src/main/res/layout/fragment_settings.xml
+++ b/NotABadPlayer/app/src/main/res/layout/fragment_settings.xml
@@ -25,6 +25,8 @@
             
             <include layout="@layout/layout_settings_keybinds"/>
 
+            <include layout="@layout/layout_settings_timers"/>
+
             <include layout="@layout/layout_settings_reset"/>
             
             <include layout="@layout/layout_settings_about"/>
