--- a/NotABadPlayer/app/src/main/res/layout/layout_settings_keybinds.xml
+++ b/NotABadPlayer/app/src/main/res/layout/layout_settings_keybinds.xml
@@ -15,7 +15,8 @@
         android:text="@string/settings_keybinds"
         android:textAppearance="@style/TitleText"
         android:singleLine="true"
-        android:textAlignment="center"/>
+        android:textAlignment="center"
+        android:gravity="center_horizontal"/>
 
     <LinearLayout
         android:layout_width="match_parent"
