--- a/NotABadPlayer/app/src/main/res/layout/layout_navigation.xml
+++ b/NotABadPlayer/app/src/main/res/layout/layout_navigation.xml
@@ -4,15 +4,15 @@
     android:layout_width="match_parent"
     android:layout_height="0dp"
     android:layout_weight="8"
-    android:orientation="horizontal"
-    android:background="@color/navigationBackground">
+    android:orientation="horizontal">
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/navigation"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         app:menu="@menu/navigation"
         app:labelVisibilityMode="labeled"
         app:itemIconTint="@drawable/bottom_navigation_item_style"
-        app:itemTextColor="@drawable/bottom_navigation_item_style" />
+        app:itemTextColor="@drawable/bottom_navigation_item_style"
+        android:background="@color/navigationBackground" />
 </LinearLayout>
